--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "build": "webpack -p --config=webpack/webpack.prod.js",
+    "build": "webpack --config=webpack/webpack.prod.js",
     "start": "webpack-dashboard -- webpack-dev-server --config=webpack/webpack.dev.js",
     "test": "jest"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
+    "babel-loader": "^7.1.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "clean-webpack-plugin": "^0.1.15",
@@ -17,24 +17,18 @@
     "css-loader": "^0.26.1",
     "enzyme": "^2.7.1",
     "enzyme-to-json": "^1.4.5",
-    "extract-text-webpack-plugin": "2.0.0-rc.2",
+    "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.28.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^18.1.0",
-    "normalize.css": "^5.0.0",
-    "offline-plugin": "^4.6.1",
-    "preact": "^7.2.0",
-    "preact-compat": "^3.13.1",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "4.0.0-beta.5",
-    "react-router-dom": "next",
-    "standard": "^8.6.0",
-    "standard-loader": "^5.0.0",
+    "react-router-dom": "4.1.1",
     "style-loader": "^0.13.1",
-    "surge": "^0.18.0",
-    "webpack": "2.2.1",
+    "uglify-js": "git://github.com/mishoo/UglifyJS2.git#harmony-v2.8.22",
+    "uglifyjs-webpack-plugin": "^0.4.6",
+    "webpack": "^3.5.4",
     "webpack-dashboard": "^0.3.0",
     "webpack-dev-server": "^2.3.0"
   },
@@ -53,5 +47,8 @@
         "statements": 100
       }
     }
+  },
+  "dependencies": {
+    "react-bootstrap": "^0.31.2"
   }
 }
